# automerge-rs

.github/workflows/: mayhem.yml
automerge-c/src/: actor_id.rs  byte_span.rs  change.rs  change_hashes.rs  changes.rs  obj.rs  result.rs  strs.rs
automerge-c/src/doc/list/: items.rs
automerge-c/src/doc/map/: items.rs
automerge-c/src/sync/: have.rs  haves.rs  state.rs
automerge/fuzz/: Cargo.toml
automerge/fuzz/fuzz_targets/: decode_state.rs  load_incremental.rs
mayhem/: Dockerfile  decode_state.mayhemfile  load_incremental.mayhemfile
